--- a/index.html
+++ b/index.html
@@ -230,6 +230,36 @@
           </div>
         </article>
       </div>
+      <!-- CARD 4 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" alt="Prod 4"/></figure>
+          <div class="p-body">
+            <h3>Prod 4</h3>
+            <p class="muted">Hand‑stuffed red chilies with a roasted spice blend.</p>
+            <div class="chips"><span class="chip">Hand‑stuffed</span><span class="chip">Roasted spices</span></div>
+          </div>
+        </article>
+      </div>
+      <!-- CARD 5 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" alt="Prod 5"/></figure>
+          <div class="p-body">
+            <h3>Prod 5</h3>
+            <p class="muted">Hand‑stuffed red chilies with a roasted spice blend.</p>
+            <div class="chips"><span class="chip">Hand‑stuffed</span><span class="chip">Roasted spices</span></div>
+          </div>
+        </article>
+      </div>
+      <!-- CARD 6 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" alt="Prod 6"/></figure>
+          <div class="p-body">
+            <h3>Prod 6</h3>
+            <p class="muted">Hand‑stuffed red chilies with a roasted spice blend.</p>
+            <div class="chips"><span class="chip">Hand‑stuffed</span><span class="chip">Roasted spices</span></div>
+          </div>
+        </article>
+      </div>
     </section>
 
     <!-- ===================== INTERACTIVE RECIPES ===================== -->
