--- a/index.html
+++ b/index.html
@@ -260,6 +260,64 @@
           </div>
         </article>
       </div>
+      <!-- CARD 7 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1505576399279-565b52d4ac71?q=80&w=1200&auto=format&fit=crop" alt="Himachali Chukh"/></figure>
+          <div class="p-body">
+            <h3>Himachali Chukh (Green Chili)</h3>
+            <p class="muted">Fiery, tangy & aromatic — with a gentle hint of jaggery.</p>
+            <div class="chips"><span class="chip">Small‑batch</span><span class="chip">Vegan</span><span class="chip">No preservatives</span></div>
+          </div>
+        </article>
+        <!-- CARD 8 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1526318472351-c75fcf070305?q=80&w=1200&auto=format&fit=crop" alt="Mango Pickle"/></figure>
+          <div class="p-body">
+            <h3>Mango Pickle (Mardana Achar)</h3>
+            <p class="muted">Our army‑inspired classic — bold, chunky, unforgettable.</p>
+            <div class="chips"><span class="chip">Family recipe</span><span class="chip">Chunky</span><span class="chip">No added colour</span></div>
+          </div>
+        </article>
+        <!-- CARD 9 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" alt="Lal Bharwa Mirch"/></figure>
+          <div class="p-body">
+            <h3>Lal Bharwa Mirch Achar</h3>
+            <p class="muted">Hand‑stuffed red chilies with a roasted spice blend.</p>
+            <div class="chips"><span class="chip">Hand‑stuffed</span><span class="chip">Roasted spices</span></div>
+          </div>
+        </article>
+      </div>
+      <!-- CARD 10 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" alt="Prod 4"/></figure>
+          <div class="p-body">
+            <h3>Prod 4</h3>
+            <p class="muted">Hand‑stuffed red chilies with a roasted spice blend.</p>
+            <div class="chips"><span class="chip">Hand‑stuffed</span><span class="chip">Roasted spices</span></div>
+          </div>
+        </article>
+      </div>
+      <!-- CARD 11 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" alt="Prod 5"/></figure>
+          <div class="p-body">
+            <h3>Prod 5</h3>
+            <p class="muted">Hand‑stuffed red chilies with a roasted spice blend.</p>
+            <div class="chips"><span class="chip">Hand‑stuffed</span><span class="chip">Roasted spices</span></div>
+          </div>
+        </article>
+      </div>
+      <!-- CARD 12 -->
+        <article class="card p-card" onclick="flipCard(this)">
+          <figure><img src="https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1200&auto=format&fit=crop" alt="Prod 6"/></figure>
+          <div class="p-body">
+            <h3>Prod 6</h3>
+            <p class="muted">Hand‑stuffed red chilies with a roasted spice blend.</p>
+            <div class="chips"><span class="chip">Hand‑stuffed</span><span class="chip">Roasted spices</span></div>
+          </div>
+        </article>
+      </div>
     </section>
 
     <!-- ===================== INTERACTIVE RECIPES ===================== -->
